Manejo de obtencion y registro de tarjetas por usuario
